--- a/index.html
+++ b/index.html
@@ -50,5 +50,7 @@
       </section>
     </main>
   </div>
+
+  <footer>Feito com <img src="./assets/icon.svg" /> pela Rocketseat</footer>
 </body>
 </html>
